Criação de slider e mudança nas funções do counter.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 			<p>0</p>
 		</div>
 		<div id = "buttons">
-			<button class = "instruction" onclick="diminuir()">Anterior</button>
-			<button class = "instruction" onclick="zerar()">Zerar</button>
-			<button class = "instruction" onclick="aumentar()">Próximo</button>
+			<button class = "instruction" id = "dim">Anterior</button>
+			<button class = "instruction" id = "zerar">Zerar</button>
+			<button class = "instruction" id = "aum">Próximo</button>
 		</div>
 	</div>
 
-	<script src = "js/script.js"></script>
+	<script src = "js/script_counter.js"></script>
 </body>
 </html>
