Botão que exclui a task e que marca como pronta.

--- a/to_do.html
+++ b/to_do.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head lang = "pt-br">
-	<title>To Do List</title>
+<head lang = "pt-br"> 
+    <title>To Do List</title>
 	<meta charset="utf-8">
 	<link rel = "stylesheet" href = "css/style_to_do.css">
 	<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
@@ -18,23 +18,10 @@
 		</div>
 
 		<div class = "tarefas">
-<!--
-			<div class = "item">
-				<p> Sei lá </p>
-                <span class="material-icons excluir">
-                    remove
-                </span></div>
-            
-            <div class = "item">
-				<p> Sei lá </p>
-                <span class="material-icons excluir">
-                    remove
-                </span>
-			</div>
--->
+
 		</div>
 		<div class = "clean">	
-			<button class = "limpar">Limpar</button>
+            <button class = "limpar"><u>L</u>impar</button>
 		</div>
 	</div>
 
