--- a/countdown.html
+++ b/countdown.html
@@ -11,22 +11,24 @@
 <body>
     <div id = "container">
 
-<!--        <input name = "calendar" type = "date" class = "calendar">-->
-
+        <div id = "choose">
+            <input name = "calendar" type = "date" class = "calendar">
+            <button id = "send">Submit</button>
+        </div>
         <div id = "content">
-            <div class = "time">
+            <div class = "time disabled">
                 <span class = "number"></span>
                 <span class = "type">Dias</span>
             </div>
-            <div class = "time">
+            <div class = "time disabled">
                 <span class = "number"></span>
                 <span class = "type">Horas</span>
             </div>
-            <div class = "time">
+            <div class = "time disabled">
                 <span class = "number"></span>
                 <span class = "type">Minutos</span>
             </div>
-            <div class = "time">
+            <div class = "time disabled">
                 <span class = "number"></span>
                 <span class = "type">Segundos</span>
             </div>
